Fix overflow bug in small header

--- a/client/styles/small/_header.scss
+++ b/client/styles/small/_header.scss
@@ -27,6 +27,7 @@
         height: $header_height;
         z-index: -1;
         box-shadow: #eee 0 -1em 0;
+        overflow: inherit;
 
         .radio,
         .toggle_played {
