--- a/public/css/jRadio.css
+++ b/public/css/jRadio.css
@@ -3573,14 +3573,15 @@ a {
     height: 7.65em;
     z-index: -1;
     box-shadow: #eee 0 -1em 0;
+    overflow: inherit;
   }
-  /* line 37, ../client/styles/small/_header.scss */
+  /* line 38, ../client/styles/small/_header.scss */
   header h1,
   header .radio {
     width: 50%;
     height: 100%;
   }
-  /* line 42, ../client/styles/small/_header.scss */
+  /* line 43, ../client/styles/small/_header.scss */
   header .radio {
     margin: 0;
     border: none;
@@ -3588,28 +3589,28 @@ a {
     border-radius: 0;
     float: right;
   }
-  /* line 49, ../client/styles/small/_header.scss */
+  /* line 50, ../client/styles/small/_header.scss */
   header .radio:before {
     font-size: 2em;
     line-height: 3.875em;
   }
-  /* line 55, ../client/styles/small/_header.scss */
+  /* line 56, ../client/styles/small/_header.scss */
   header .toggle_played {
     display: none;
   }
-  /* line 59, ../client/styles/small/_header.scss */
+  /* line 60, ../client/styles/small/_header.scss */
   header h1 {
     float: left;
     color: transparent;
   }
-  /* line 63, ../client/styles/small/_header.scss */
+  /* line 64, ../client/styles/small/_header.scss */
   header h1:before {
     font-size: 3em;
     left: calc(50% - .5em);
     top: inherit;
     bottom: -0.15em;
   }
-  /* line 70, ../client/styles/small/_header.scss */
+  /* line 71, ../client/styles/small/_header.scss */
   header h1:after {
     position: absolute;
     font-size: 1.75em;
